tests/invalid/realm_conflicts_with_symbol.wio
fn gameplay() -> i32 {
    return 0;
}

realm gameplay {
    fn Score() -> i32 {
        return 1;
    }
}

fn Entry(args: string[]) -> i32 {
    return 0;
}
